fix un-aligned icon for inline help

--- a/src/assets/scss/components/_tooltip-help.scss
+++ b/src/assets/scss/components/_tooltip-help.scss
@@ -26,7 +26,7 @@
 }
 
 .has-help {
-  h1, h2, h3, p {
+  h1, h2, h3, p, div {
     display: inline-block;
   }
   .standalone-help {
